// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments should handle sortBy properly 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      class="flex items-center mt-5 text-sm font-semibold text-theme-neutral-900"
    >
      <span>
        Sort by:
      </span>
      <div
        class="flex items-center"
      >
        <span
          class="ml-2"
        >
          Date
        </span>
        <div
          class="ml-1"
        >
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <div
              class="float-right outline-none cursor-pointer focus:outline-none"
            >
              <div
                class="sc-AxirZ fttODj"
                height="10"
                width="10"
              >
                <svg>
                  arrowdown.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="flex flex-col mt-5"
      >
        <div
          class="relative flex items-center space-x-3 divide-theme-neutral-400"
        >
          <span
            class="text-lg font-semibold"
          >
            Rok Cernec
          </span>
          <div
            class="sc-AxjAm jsQKzL border-theme-neutral-300"
            type="vertical"
          />
          <div
            class="flex items-center text-sm font-semibold text-theme-warning-300"
          >
            <div
              class="sc-AxirZ fttODj"
              height="10"
              width="10"
            >
              <svg>
                star.svg
              </svg>
            </div>
            <span
              class="ml-1 text-theme-neutral-600"
            >
              4.6
            </span>
          </div>
          <div
            class="sc-AxjAm jsQKzL border-theme-neutral-300"
            type="vertical"
          />
          <span
            class="text-sm font-semibold text-theme-neutral-400"
          >
            <span
              data-testid="timeago"
            >
              11 days ago
            </span>
          </span>
        </div>
        <div
          class="w-11/12 mt-2"
        >
          <p
            class="text-theme-neutral-600"
          >
            As ARK Core is written exclusively in Node.js, the server-side framework for JavaScript and Typescript, installing Node.js is a necessity for core development. The code below installs Node.js from the source.
          </p>
        </div>
      </div>
      <div
        class="flex flex-col mt-5"
      >
        <div
          class="relative flex items-center space-x-3 divide-theme-neutral-400"
        >
          <span
            class="text-lg font-semibold"
          >
            Gerard Blezer
          </span>
          <div
            class="sc-AxjAm jsQKzL border-theme-neutral-300"
            type="vertical"
          />
          <div
            class="flex items-center text-sm font-semibold text-theme-warning-300"
          >
            <div
              class="sc-AxirZ fttODj"
              height="10"
              width="10"
            >
              <svg>
                star.svg
              </svg>
            </div>
            <span
              class="ml-1 text-theme-neutral-600"
            >
              4.6
            </span>
          </div>
          <div
            class="sc-AxjAm jsQKzL border-theme-neutral-300"
            type="vertical"
          />
          <span
            class="text-sm font-semibold text-theme-neutral-400"
          >
            <span
              data-testid="timeago"
            >
              11 days ago
            </span>
          </span>
        </div>
        <div
          class="w-11/12 mt-2"
        >
          <p
            class="text-theme-neutral-600"
          >
            As an open-source platform, the entire ARK codebase is readily available on GitHub providing blockchain developers with a convenient location for all ARK technologies and repositories.
          </p>
          <div
            class="flex flex-col mt-3"
          >
            <div
              class="flex items-center text-theme-neutral-400"
            >
              <div
                class="flex items-center w-10"
              >
                <div
                  class="sc-AxirZ gNHFnS -mt-2 mx-auto"
                  height="18"
                  width="15"
                >
                  <svg>
                    reply-arrow.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex items-center space-x-3"
              >
                <span
                  class="text-lg font-semibold text-theme-neutral-900"
                >
                  Developer response
                </span>
                <div
                  class="sc-AxjAm jsQKzL border-theme-neutral-300"
                  type="vertical"
                />
                <span
                  class="text-sm font-semibold text-theme-neutral-400"
                >
                  <span
                    data-testid="timeago"
                  >
                    11 days ago
                  </span>
                </span>
              </div>
            </div>
            <div
              class="sc-Axmtr eSxxmq mt-2 ml-10 text-theme-neutral-600"
            >
              <a
                href="#"
              >
                @Gerard Blezer
              </a>
               Our GitHub bount reward program utlilizes a tiered structure.
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-7"
    >
      <div
        class="sc-AxgMl jyGyFo"
        data-testid="Pagination"
      >
        <button
          class="sc-AxhCb BegvR"
          color="primary"
          data-testid="Pagination__first"
          disabled=""
          type="button"
        >
          <div
            class="sc-AxirZ hDwaov"
            height="12"
            width="12"
          >
            <svg>
              pagination-first.svg
            </svg>
          </div>
        </button>
        <button
          class="sc-AxhCb BegvR"
          color="primary"
          data-testid="Pagination__previous"
          disabled=""
          type="button"
        >
          <div
            class="sc-AxirZ fttODj mr-2"
            height="10"
            width="10"
          >
            <svg>
              back.svg
            </svg>
          </div>
          Previous
        </button>
        <div
          class="flex px-2 rounded bg-theme-primary-contrast"
        >
          <div
            class="sc-AxheI cCUnCz current-page"
          >
            1
          </div>
          <div
            class="sc-AxheI cCUnCz"
          >
            2
          </div>
          <div
            class="sc-AxheI cCUnCz"
          >
            3
          </div>
        </div>
        <button
          class="sc-AxhCb BegvR"
          color="primary"
          data-testid="Pagination__next"
          type="button"
        >
          Next
          <div
            class="sc-AxirZ hDwaov ml-2"
            height="12"
            width="12"
          >
            <svg>
              forward.svg
            </svg>
          </div>
        </button>
        <button
          class="sc-AxhCb BegvR"
          color="primary"
          data-testid="Pagination__last"
          type="button"
        >
          <div
            class="sc-AxirZ hDwaov"
            height="12"
            width="12"
          >
            <svg>
              pagination-last.svg
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Comments should render properly 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      class="flex items-center mt-5 text-sm font-semibold text-theme-neutral-900"
    >
      <span>
        Sort by:
      </span>
      <div
        class="flex items-center"
      >
        <span
          class="ml-2"
        >
          Best
        </span>
        <div
          class="ml-1"
        >
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <div
              class="float-right outline-none cursor-pointer focus:outline-none"
            >
              <div
                class="sc-AxirZ fttODj"
                height="10"
                width="10"
              >
                <svg>
                  arrowdown.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="flex flex-col mt-5"
      >
        <div
          class="relative flex items-center space-x-3 divide-theme-neutral-400"
        >
          <span
            class="text-lg font-semibold"
          >
            Rok Cernec
          </span>
          <div
            class="sc-AxjAm jsQKzL border-theme-neutral-300"
            type="vertical"
          />
          <div
            class="flex items-center text-sm font-semibold text-theme-warning-300"
          >
            <div
              class="sc-AxirZ fttODj"
              height="10"
              width="10"
            >
              <svg>
                star.svg
              </svg>
            </div>
            <span
              class="ml-1 text-theme-neutral-600"
            >
              4.6
            </span>
          </div>
          <div
            class="sc-AxjAm jsQKzL border-theme-neutral-300"
            type="vertical"
          />
          <span
            class="text-sm font-semibold text-theme-neutral-400"
          >
            <span
              data-testid="timeago"
            >
              11 days ago
            </span>
          </span>
        </div>
        <div
          class="w-11/12 mt-2"
        >
          <p
            class="text-theme-neutral-600"
          >
            As ARK Core is written exclusively in Node.js, the server-side framework for JavaScript and Typescript, installing Node.js is a necessity for core development. The code below installs Node.js from the source.
          </p>
        </div>
      </div>
      <div
        class="flex flex-col mt-5"
      >
        <div
          class="relative flex items-center space-x-3 divide-theme-neutral-400"
        >
          <span
            class="text-lg font-semibold"
          >
            Gerard Blezer
          </span>
          <div
            class="sc-AxjAm jsQKzL border-theme-neutral-300"
            type="vertical"
          />
          <div
            class="flex items-center text-sm font-semibold text-theme-warning-300"
          >
            <div
              class="sc-AxirZ fttODj"
              height="10"
              width="10"
            >
              <svg>
                star.svg
              </svg>
            </div>
            <span
              class="ml-1 text-theme-neutral-600"
            >
              4.6
            </span>
          </div>
          <div
            class="sc-AxjAm jsQKzL border-theme-neutral-300"
            type="vertical"
          />
          <span
            class="text-sm font-semibold text-theme-neutral-400"
          >
            <span
              data-testid="timeago"
            >
              11 days ago
            </span>
          </span>
        </div>
        <div
          class="w-11/12 mt-2"
        >
          <p
            class="text-theme-neutral-600"
          >
            As an open-source platform, the entire ARK codebase is readily available on GitHub providing blockchain developers with a convenient location for all ARK technologies and repositories.
          </p>
          <div
            class="flex flex-col mt-3"
          >
            <div
              class="flex items-center text-theme-neutral-400"
            >
              <div
                class="flex items-center w-10"
              >
                <div
                  class="sc-AxirZ gNHFnS -mt-2 mx-auto"
                  height="18"
                  width="15"
                >
                  <svg>
                    reply-arrow.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex items-center space-x-3"
              >
                <span
                  class="text-lg font-semibold text-theme-neutral-900"
                >
                  Developer response
                </span>
                <div
                  class="sc-AxjAm jsQKzL border-theme-neutral-300"
                  type="vertical"
                />
                <span
                  class="text-sm font-semibold text-theme-neutral-400"
                >
                  <span
                    data-testid="timeago"
                  >
                    11 days ago
                  </span>
                </span>
              </div>
            </div>
            <div
              class="sc-Axmtr eSxxmq mt-2 ml-10 text-theme-neutral-600"
            >
              <a
                href="#"
              >
                @Gerard Blezer
              </a>
               Our GitHub bount reward program utlilizes a tiered structure.
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-7"
    >
      <div
        class="sc-AxgMl jyGyFo"
        data-testid="Pagination"
      >
        <button
          class="sc-AxhCb BegvR"
          color="primary"
          data-testid="Pagination__first"
          disabled=""
          type="button"
        >
          <div
            class="sc-AxirZ hDwaov"
            height="12"
            width="12"
          >
            <svg>
              pagination-first.svg
            </svg>
          </div>
        </button>
        <button
          class="sc-AxhCb BegvR"
          color="primary"
          data-testid="Pagination__previous"
          disabled=""
          type="button"
        >
          <div
            class="sc-AxirZ fttODj mr-2"
            height="10"
            width="10"
          >
            <svg>
              back.svg
            </svg>
          </div>
          Previous
        </button>
        <div
          class="flex px-2 rounded bg-theme-primary-contrast"
        >
          <div
            class="sc-AxheI cCUnCz current-page"
          >
            1
          </div>
          <div
            class="sc-AxheI cCUnCz"
          >
            2
          </div>
          <div
            class="sc-AxheI cCUnCz"
          >
            3
          </div>
        </div>
        <button
          class="sc-AxhCb BegvR"
          color="primary"
          data-testid="Pagination__next"
          type="button"
        >
          Next
          <div
            class="sc-AxirZ hDwaov ml-2"
            height="12"
            width="12"
          >
            <svg>
              forward.svg
            </svg>
          </div>
        </button>
        <button
          class="sc-AxhCb BegvR"
          color="primary"
          data-testid="Pagination__last"
          type="button"
        >
          <div
            class="sc-AxirZ hDwaov"
            height="12"
            width="12"
          >
            <svg>
              pagination-last.svg
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
